WG/rules.v4
# AUTOGENERATED FILE - DO NOT EDIT
#
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-N oivanov
-N dkomarov
-N ipetrov
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p udp --dport 51820 -j ACCEPT
-A INPUT -p tcp --dport 22 -j ACCEPT
-A INPUT -p icmp --icmp-type echo-request -j ACCEPT
-A FORWARD -i eth0 -o wg0 -d 10.100.0.0/24 -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -i wg0 -p udp --dport 53 -d 192.168.10.5,192.168.11.6 -j ACCEPT
-A FORWARD -i wg0 -s 10.100.0.10 -j oivanov
-A FORWARD -i wg0 -s 10.100.0.11 -j dkomarov
-A FORWARD -i wg0 -s 10.100.0.12 -j ipetrov
-A oivanov -m set --match-set oivanov_dst dst -j ACCEPT -m comment --comment "Oleg Ivanov"
-A dkomarov -m set --match-set dkomarov_dst dst -j ACCEPT -m comment --comment "Dmitrii Komarov"
-A ipetrov -m set --match-set ipetrov_dst dst -j ACCEPT -m comment --comment "Ivan Petrov"
COMMIT
